tests/samples/positive/generics/generic_function_identity.ax
module generic_function_identity;

struct Pair<T> {
    left: T;
    right: T;
}

fn identity<T>(value: T) -> T {
    return value;
}

fn twice<T>(value: T) -> T {
    return identity<T>(value);
}

fn make_pair<T>(left: T, right: T) -> Pair<T> {
    return Pair {
        left: left,
        right: right,
    };
}

fn main() -> i32 {
    let explicit = identity<i32>(20);
    let inferred = identity(21);
    let flag = twice(true);
    if !flag {
        return 1;
    }
    let pair = make_pair(3, 4);
    let expected: Pair<i32> = make_pair(5, 6);
    return explicit + inferred + pair.left + pair.right + expected.left + expected.right - 59;
}
