tests/samples/negative/types/tuple_field_non_numeric.ax
module tuple_field_non_numeric;

fn main() -> i32 {
    let pair = (1, false);
    return pair.first;
}
